data/all_generated_tests/raw_wast_tests/call_EdgeCaseFailuresinbr_table_3765.wast
;; 4. **Test Description**: Construct a nested `call` instruction followed by nested `br_table` instructions with correctly bounded indices. Each `br_table` should handle different depth levels. Check if WebAssembly continues correctly while wizard_engine might have incorrect stack operations.    - **Reasoning**: Examines nested function and `br_table` invocation with respect to call stack depth and index handling.

(assert_invalid
  (module
    (type (func (param i32)))
    (func $nested_call_1 (call $nested_call_2 (i32.const 0)))
    (func $nested_call_2 (call $nested_call_3 (i32.const 0)))
    (func $nested_call_3 (br_table 0 1 2 (i32.const 0)))
    (func (call $nested_call_1 (i32.const 0)))
  )
  "type mismatch"
)